--- a/src/main/resources/projectr.mixins.json
+++ b/src/main/resources/projectr.mixins.json
@@ -7,8 +7,7 @@
   ],
   "client": [
     "ExampleMixin",
-    "TickHook",
-    "LocateCommandMixin"
+    "TickHook"
   ],
   "injectors": {
     "defaultRequire": 1
