--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.7.8+build.187
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.ProejectR
-	archives_base_name = ProejectR
+	mod_version = 1.1.0
+	maven_group = net.ProjectR
+	archives_base_name = ProjectR
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
