--- a/src/main/resources/projectr.mixins.json
+++ b/src/main/resources/projectr.mixins.json
@@ -7,7 +7,8 @@
   ],
   "client": [
     "ExampleMixin",
-    "TickHook"
+    "TickHook",
+    "experienceHook"
   ],
   "injectors": {
     "defaultRequire": 1
