Blue Shroom Light added to generation

--- a/src/main/resources/projectr.mixins.json
+++ b/src/main/resources/projectr.mixins.json
@@ -8,7 +8,8 @@
   "client": [
     "ExampleMixin",
     "TickHook",
-    "experienceHook"
+    "experienceHook",
+    "shroomHook"
   ],
   "injectors": {
     "defaultRequire": 1
