--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,10 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 
 repositories {
-
+	maven {
+		name = "CottonMC"
+		url = "http://server.bbkr.space:8081/artifactory/libs-release"
+	}
 }
 
 dependencies {
@@ -22,6 +25,8 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
+	//LibGUI
+	modImplementation "io.github.cottonmc:LibGui:${project.libgui_version}"
 }
 
 processResources {
