--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,5 @@ org.gradle.jvmargs=-Xmx4G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.5.6+build.313-1.16
+	fabric_version = 0.5.6+build.313-1.16
+	libgui_version = 1.8.0+20w12a
