--- a/src/main/resources/projectr.mixins.json
+++ b/src/main/resources/projectr.mixins.json
@@ -8,7 +8,7 @@
   "client": [
     "ExampleMixin",
     "TickHook",
-    "experienceHook",
+    "playerHook",
     "shroomHook"
   ],
   "injectors": {
