--- a/src/main/resources/projectr.mixins.json
+++ b/src/main/resources/projectr.mixins.json
@@ -9,7 +9,8 @@
     "ExampleMixin",
     "TickHook",
     "playerHook",
-    "shroomHook"
+    "shroomHook",
+    "HudHook"
   ],
   "injectors": {
     "defaultRequire": 1
